--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@libs/*": ["libs/*"]
+      "@libs/*": ["libs/*"],
+      "@libs/dto": ["libs/dto"]
     }
   }
 }
