feat: Add admin module, controller, service, and main file
This commit adds the admin module, controller, service, and main file to the project. The admin module includes the necessary imports and configurations, while the controller handles the 'admin.create' event and calls the admin service to create a new admin. The admin service contains the logic for creating an admin and logs the successful creation. The main file sets up the admin microservice using Kafka as the transport.

Refs: #123

--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "start:email": "ts-node -r tsconfig-paths/register apps/email/main.ts",
     "dev:docker": "docker-compose up --build",
     "down:docker": "docker-compose down -v",
-    "logs:docker": "docker-compose logs -f --tail=100"
+    "logs:docker": "docker-compose logs -f --tail=100",
+    "start:user":  "ts-node -r tsconfig-paths/register apps/user/main.ts",
+    "start:admin": "ts-node -r tsconfig-paths/register apps/admin/main.ts",
+    "start:ambassador": "nest start --watch apps/ambassador",
+    "start:checkout": "nest start --watch apps/checkout"
   },
   "dependencies": {
     "@eslint/eslintrc": "^3.3.1",
