feat: Add ambassador module, controller, service, and main file

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "logs:docker": "docker-compose logs -f --tail=100",
     "start:user":  "ts-node -r tsconfig-paths/register apps/user/main.ts",
     "start:admin": "ts-node -r tsconfig-paths/register apps/admin/main.ts",
-    "start:ambassador": "nest start --watch apps/ambassador",
+    "start:ambassador": "ts-node -r tsconfig-paths/register apps/ambassador/main.ts",
     "start:checkout": "nest start --watch apps/checkout"
   },
   "dependencies": {
